# ztoryc

./: .gitignore  AGENTS.md  ANIMATIC_TASKS.md  CHANGELOG.md  CONTRIBUTING.md  build_and_deploy.sh  updateVersion.sh
.githooks/: pre-push
.github/: pull_request_template.md
.github/workflows/: linux_build.yml  macOS_build.yml  pr_cache_cleanup.yml  windows_build.yml
ci-scripts/: read_thirdparty_version.py  thirdparty_versions.sh
ci-scripts/linux/: tahoma-build.sh  tahoma-buildffmpeg.sh  tahoma-buildopencv.sh  tahoma-buildpkg.sh  tahoma-bundle-apps.sh  tahoma-get3rdpartyapps.sh
ci-scripts/osx/: render-dmg-background.py  tahoma-build.sh  tahoma-buildffmpeg.sh  tahoma-buildlibgphoto2.sh  tahoma-buildopencv.sh  tahoma-buildpkg.sh  tahoma-bundle-apps.sh  tahoma-get3rdpartyapps.sh  tahoma-install.sh  ztoryc_dmg_settings.py
ci-scripts/windows/: tahoma-build.bat  tahoma-buildpkg.bat  tahoma-get3rdpartyapps.bat  tahoma-install.bat
scripts/: install-git-safety.sh  install_ccache_local.sh
stuff/config/: exportsettings.txt
stuff/profiles/layouts/: menubar.xml
toonz/cmake/: BundleInfo.plist.in  FindSuperLU.cmake  ZtorycVersion.cmake
toonz/install/: SystemVar.ini
toonz/installer/osx/: app.rb
toonz/installer/windows/: setup.iss
toonz/sources/: CMakeLists.txt
toonz/sources/include/: tenv.h  tversion.h  tversion.h.in
toonz/sources/stopmotion/: webcam.h
toonz/sources/tnzcore/: CMakeLists.txt
toonz/sources/toonz/: iocommand.cpp  (+47 more)
toonz/sources/xdg-data/: CMakeLists.txt  org.ztoryc.Ztoryc.appdata.xml  org.ztoryc.Ztoryc.desktop  org.ztoryc.Ztoryc.metainfo.xml
(+49 files in other folders)
