install(FILES org.ztoryc.Ztoryc.metainfo.xml org.ztoryc.Ztoryc.appdata.xml DESTINATION share/metainfo)
install(FILES org.ztoryc.Ztoryc.desktop DESTINATION share/applications)
install(FILES tahoma2d_logo_128.png DESTINATION share/icons/hicolor/128x128/apps RENAME org.ztoryc.Ztoryc.png)
install(FILES tahoma2d_logo_256.png DESTINATION share/icons/hicolor/256x256/apps RENAME org.ztoryc.Ztoryc.png)
